# semanticvoxel_deployment

./: README.md
semantic_voxel_ws/src/deeplabv3_mobilnet/: CMakeLists.txt  package.xml
semantic_voxel_ws/src/deeplabv3_mobilnet/launch/: launchall.launch
semantic_voxel_ws/src/deeplabv3_mobilnet/src/: main.cpp  win32_dirent.h
semantic_voxel_ws/src/deeplabv3_mobilnet/src/export_inc/: algorithm_sdk.h  algorithm_sdk_error_code.h  common_export.h  maxvision_type.h
semantic_voxel_ws/src/deeplabv3_mobilnet/src/model/: best_deeplabv3plus_mobilenet_cityscapes_os16.pth  deeplabv3_mobilenet.onnx
semantic_voxel_ws/src/deeplabv3_mobilnet/src/src/: Segmention_SDK.cpp  detector.cpp  detector.h  engine.cpp  engine.h  version.cpp
semantic_voxel_ws/src/detection_visualization/: CMakeLists.txt  package.xml
semantic_voxel_ws/src/detection_visualization/launch/: launchall.launch
semantic_voxel_ws/src/detection_visualization/src/inc/: pcdet_visualization_node.h
semantic_voxel_ws/src/fusion/: CMakeLists.txt  package.xml  publishCloud.py
semantic_voxel_ws/src/fusion/launch/: launchall.launch
semantic_voxel_ws/src/fusion/msg/: matrix2D_msg.msg
semantic_voxel_ws/src/fusion/src/: fusion_node.cpp  main_test.cpp  publishCloud.py  temp.cpp
semantic_voxel_ws/src/fusion/src/inc/: engine.h  error_code.h  scatter_cuda.h  voxelization.h
semantic_voxel_ws/src/fusion/src/model/: before_nms_script.pt  pp_fusion_pfn.pt
semantic_voxel_ws/src/fusion/src/src/: engine.cpp  iou3d_nms.cpp  iou3d_nms_kernel.cu  scatter_cuda.cu  voxelization_cuda.cu
semantic_voxel_ws/src/launch/: semanticvoxel_demo_all.launch
semantic_voxel_ws/src/pcdet_semanticvoxel/: CMakeLists.txt  package.xml
semantic_voxel_ws/src/pcdet_semanticvoxel/launch/: launchall.launch
semantic_voxel_ws/src/pcdet_semanticvoxel/src/: README.md  pcdet_semanticvoxel_node.cpp  pcdet_visualization_node.cpp
semantic_voxel_ws/src/pcdet_semanticvoxel/src/inc/: iou3d_nms.h  pcdet_semanticvoxel.h  pcdet_semanticvoxel_node.h
semantic_voxel_ws/src/pcdet_semanticvoxel/src/model/: pp_fusion_pfn_12000.pt  pp_vfe_pfn.pt  pp_vfe_pfn_12000.pt
semantic_voxel_ws/src/pcdet_semanticvoxel/src/src/: pcdet_semanticvoxel.cpp  scatter_cuda.cu  voxelization_cpu.cpp  voxelization_cuda.cu
